--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -1,7 +1,23 @@
-.tab__content--item {
-    display: none;
+.tab__content {
 
-    &.active {
-        display: block;
+    &--section {
+        display: none;
+
+        &.active {
+            display: block;
+        }
+    }
+
+    &--item {
+        border-bottom: 1px solid grey;
+        margin-top: 10px;
+
+        &:last-child {
+            border-bottom: none;
+        }
+
+        @media only screen and (max-width: 500px) {
+            margin-right: 20px;
+        }
     }
 }
